task #85 modificació de tipus, gravetat, prioritat i descripció d'issues (backend)

--- a/issues/templates/issue_edit.html
+++ b/issues/templates/issue_edit.html
@@ -233,7 +233,7 @@
                     <select id="selectPrior" name="prioritat" type="submit" class="status-button" style="margin-top: 5px;">
                         {% for key,value in TPrioritat %}
                             
-                            {% if issue.gravetat == key %}
+                            {% if issue.prioritat == key %}
                                 <option selected="selected" value="{{key}}">{{value}}</option>
                             {%else %}
                                 <option value="{{key}}">{{value}}</option>
