--- a/issues/templates/issue_confirm_delete.html
+++ b/issues/templates/issue_confirm_delete.html
@@ -1,9 +1,30 @@
 {% extends "base.html" %}
 
 {% block content %}
+  <!--
   <h1>Are you sure you want to delete the issue?</h1>
   <p>Issue: {{ object.title }}</p>
-  <p>Description: {{ object.description }}</p>
+  <p>Description: {{ object.description }}</p> -->
+
+  <div class="lightbox lightbox-generic-delete open" style="display: flex;">
+    <a class="close" href="/issues/">
+      X
+    </a>
+    <form method="post" class="ng-pristine ng-valid" style="display :block;">
+      {% csrf_token %}
+      <h2 class="title">Esborra issue</h2>
+      <p> 
+        <span class="subtitle">Segur que vols esborrar aquest issue?</span>
+        <span class="message">{{issue.subject}}</span>
+      </p>
+      <div class="options">
+        <a href="{% url 'editar_issue' issue.id %}" variant="icon" class="btn-link btn-cancel js-cancel">
+          <span>Cancelar</span>
+        </a>
+        <input type="submit" variant="destructive" value="Esborrar" class="btn-small btn-confirm js-confirm" style>
+      </div>
+    </form>
+  </div>
   
   <form method="post">
     {% csrf_token %}
