--- a/issues/templates/issue_edit.html
+++ b/issues/templates/issue_edit.html
@@ -351,20 +351,32 @@
                 </div>
             </section>
             
-            <input 
-                type="date" 
-                id="datePickerInput" 
-                name="dataLimit"
-                style="display: none;"
-            >
+            <div style="display: flex; justify-content: space-between;">
+                <input 
+                    type="date" 
+                    id="datePickerInput" 
+                    name="dataLimit"
+                    style="display: none;"
+                >
+                <button id="btnSaveDateDirect" type="submit" name="guardar_dataLimit" style="display: none;">
+                    <i class="fa fa-floppy-o" aria-hidden="true"></i>
+                </button>
+            </div>
+            
             <button id="btnSaveDate" type="submit" name="guardar_dataLimit" style="display: none;"></button>
 
-            <input 
-                type="text" 
-                id="inputMotiuBloqueig" 
-                name="motiuBloqueig"
-                style="display: none;"
-            >
+            <div style="display: flex; justify-content: space-between;">
+                <input 
+                    type="text" 
+                    id="inputMotiuBloqueig" 
+                    name="motiuBloqueig"
+                    style="display: none;"
+                >
+                <button id="btnSaveBloqueigDirect" type="submit" name="guardar_bloquejat" style="display: none;">
+                    <i class="fa fa-floppy-o" aria-hidden="true"></i>
+                </button>
+            </div>
+           
             <button id="btnSaveMotiuBloqueig" type="submit" name="guardar_bloquejat" style="display: none;"></button>
 
         </sidebar>
@@ -426,9 +438,11 @@
     var btnTimeLine = document.getElementById('btnTimeLine');
     var btnSaveDate = document.getElementById('btnSaveDate');
     var datePickerInput = document.querySelector('#datePickerInput');
+    var btnSaveDateDirect = document.getElementById('btnSaveDateDirect');
     btnTimeLine.addEventListener('click', () => {
         event.preventDefault();
         datePickerInput.style.display = 'block';
+        btnSaveDateDirect.style.display = 'block';
     });
     datePickerInput.addEventListener('blur', () => {
         event.preventDefault();
@@ -438,20 +452,16 @@
     var btnBloqueig = document.getElementById('btnBloqueig');
     var inputMotiuBloqueig = document.getElementById('inputMotiuBloqueig');
     var btnSaveMotiuBloqueig = document.getElementById('btnSaveMotiuBloqueig');
+    var btnSaveBloqueigDirect = document.getElementById('btnSaveBloqueigDirect');
     btnBloqueig.addEventListener('click', () => {
         event.preventDefault();
         inputMotiuBloqueig.style.display = 'block';
+        btnSaveBloqueigDirect.style.display = 'block';
     })
     inputMotiuBloqueig.addEventListener('blur', function() {
         event.preventDefault();
         btnSaveMotiuBloqueig.click();
     });
-    /*
-    btnGuardarBloqueix.addEventListener('blur', function() {
-        event.preventDefault();
-        btnSaveMotiuBloqueig.click();
-    });
-    */
     
 
 </script>
