--- a/issues/templates/issue_form.html
+++ b/issues/templates/issue_form.html
@@ -143,20 +143,30 @@
                                         </button>
                                     </div>
                                 </section>
-                                <input 
-                                    type="date" 
-                                    id="datePickerInput" 
-                                    name="dataLimit"
-                                    style="display: none;"
-                                >
+                                <div style="display: felx; justify-content: space-between;">
+                                    <input 
+                                        type="date" 
+                                        id="datePickerInput" 
+                                        name="dataLimit"
+                                        style="display: none;"
+                                    >
+                                    <button id="btnSaveDateDirect" type="submit" name="guardar_dataLimit" style="display: none;">
+                                        <i class="fa fa-floppy-o" aria-hidden="true"></i>
+                                    </button>
+                                </div>
                                 <button id="btnSaveDate" type="submit" name="guardar_dataLimit" style="display: none;"></button>
 
-                                <input 
-                                    type="text" 
-                                    id="inputMotiuBloqueig" 
-                                    name="motiuBloqueig"
-                                    style="display: none;"
-                                >
+                                <div style="display: felx; justify-content: space-between;">
+                                    <input 
+                                        type="text" 
+                                        id="inputMotiuBloqueig" 
+                                        name="motiuBloqueig"
+                                        style="display: none;"
+                                    >
+                                    <button id="btnSaveBloqueigDirect" type="submit" name="guardar_bloquejat" style="display: none;">
+                                        <i class="fa fa-floppy-o" aria-hidden="true"></i>
+                                    </button>
+                                </div>
                                 <button id="btnSaveMotiuBloqueig" type="submit" name="guardar_bloquejat" style="display: none;"></button>
 
                             </div>
@@ -196,26 +206,30 @@
         var btnTimeLine = document.getElementById('btnTimeLine');
         var datePickerInput = document.getElementById('datePickerInput');
         var btnSaveDate = document.getElementById('btnSaveDate');
+        var btnSaveDateDirect = document.getElementById('btnSaveDateDirect');
         btnTimeLine.addEventListener('click', () => {
             event.preventDefault();
             datePickerInput.style.display = 'block';
+            btnSaveDateDirect.style.display = 'block';
         });
-        datePickerInput.addEventListener('blur'), function() {
+        datePickerInput.addEventListener('blur', function() {
             event.preventDefault();
             btnSaveDate.click();
-        }
+        });
 
         var btnBloqueig = document.getElementById('btnBloqueig');
         var inputMotiuBloqueig = document.getElementById('inputMotiuBloqueig');
         var btnSaveMotiuBloqueig = document.getElementById('btnSaveMotiuBloqueig');
+        var btnSaveBloqueigDirect = document.getElementById('btnSaveBloqueigDirect');
         btnBloqueig.addEventListener('click', () => {
             event.preventDefault();
             inputMotiuBloqueig.style.display = 'block';
+            btnSaveBloqueigDirect.style.display = 'block';
         });
-        inputMotiuBloqueig.addEventListener('blur'), function() {
+        inputMotiuBloqueig.addEventListener('blur', function() {
             event.preventDefault();
             btnSaveMotiuBloqueig.click();
-        }
+        });
 
     </script>
     
