--- a/issues/templates/issue_edit.html
+++ b/issues/templates/issue_edit.html
@@ -66,12 +66,16 @@
                         </div>
                         <div>
                             <div class="created-by">
-                                <a href="url usser">Created by userName</a>
+                                
+                                <a href="url usser">Created by {{ issue.autor.user.first_name }}</a>
                                 <div class="created-date">{{issue.dataModificacio}}</div>
                             </div>
                             <div class="user-avatar">
                                 <a href="url usser"></a>
-                                <span>Foto perfil</span>
+                                <img url="{{ issue.autor.avatar.url }}"
+                                    width="40px"
+                                    height="40px"
+                                >
                             </div>
                         </div>
                     </div>
@@ -98,7 +102,7 @@
                     <div class="attachments-header">
                         <h3 class="attachment-title">
                             <!-- num attachment -->
-                            <span class="attachments-num">1</span>
+                            <span class="attachments-num">{{issue.attachments.all.count}}</span>
                             <span class="attachments-text">Attachments</span>
                         </h3>
                         
@@ -115,8 +119,6 @@
                         </div>
                     </div>
                     <!-- attachment content-->
-
-                <!-- ToDo: Posar macoooo! -->
 
                     <div class="attachment-list sortable">
                         <ul>
@@ -256,12 +258,14 @@
                         <div>
                             {% if issue.assignacio != null %}
                                 <div style="display: flex; justify-content: space-between; margin-left: 5px; margin-right: 5px;">
-                                    <img src="{{ ets_assignat.autor.user.avatar.url }}"
+                                    <img src="{{ issue.assignacio.avatar.url }}"
                                         width="60px"
                                         height="60px"
                                     >
-                                    <span style="margin-left: 15px;">{{ ets_assignat.autor.user.first_name }}</span>
-                                    <i></i>
+                                    <span style="margin-left: 15px;">{{ issue.assignacio.first_name }}</span>
+                                    <a href="{% url 'esborrar_assignat' issue.assignacio %}">
+                                        <i class="fa fa-times" aria-hidden="true"></i>
+                                    </a>
                                 </div>  
                             {%endif%}
 
@@ -273,8 +277,7 @@
                                     <option value="{{assig}}">{{assig}}</option>
                                 {% endfor %}
                             </select>
-                            <button id="btnSaveAssig" type="submit" name="guardar_assignat" style="
-                            display: none;"></button>
+                            <button id="btnSaveAssig" type="submit" name="guardar_assignat" style="display: none;"></button>
                         </div>
                         <div class="ticket-users-actions">
                             <a href="url/assignOther" style="margin-right: 10px;" class="ticket-users-actions">+ Add assigned</a>
@@ -301,13 +304,16 @@
                                                 height="60px"
                                             >
                                             <span style="margin-right: 15px;">{{ obs.autor.user.first_name }}</span>
+                                            <a href="{% url 'esborrar_observador' obs %}">
+                                                <i class="fa fa-times" aria-hidden="true"></i>
+                                            </a>
                                         </div>
                                     </li>
                                 {% endfor %}
                             </ul>
                         </div>
                         <div>
-                            <select multiple id="selectObs" name="guardar_observadors" type="submit" class="status-button">
+                            <select id="selectObs" name="guardar_observadors" type="submit" class="status-button">
                                 {% for obs in possibles_observadors %}
                                     <option value="{{obs}}">{{obs}}</option>
                                 {% endfor %}
