--- a/issuePeople/templates/navbar.html
+++ b/issuePeople/templates/navbar.html
@@ -7,12 +7,12 @@
         <nav class="navbar" style>
             <div class="nav-left">
                 <a href="/issues" title="Homepage" class="logo">
-                    <img src="../../static/imatge/logo_IssuePeople.png" style="width: 128px; height: 100px;">
+                    <img src="../../../static/imatge/logo_IssuePeople.png" style="width: 128px; height: 100px;">
                 </a>
             </div>
             <div class="nav-right">
                 <a href="/usuaris/perfil" title="Usuari" class="logo">
-                    <img src= usuaris/perfil/{{usuari.avatar.url}} style="width: 32px; height: 32px;">
+                    <img src= {{usuari.avatar.url}} style="width: 32px; height: 32px;">
                 </a>
             </div>
         </nav>
