task #115 solucionant bugs navbar i modificació de la connexió amb S3

--- a/usuaris/templates/usuaris_singUp.html
+++ b/usuaris/templates/usuaris_singUp.html
@@ -7,7 +7,7 @@
         <div class="auth">
             <div class="auth-container">
                 <div class="logo-svg">
-                    <img src="../../static/imatge/logo.jpeg"
+                    <img src="{{ logo_url }}"
                         width="300"
                         height="200">
                 </div>
