--- a/issuePeople/templates/navbar.html
+++ b/issuePeople/templates/navbar.html
@@ -1,18 +1,17 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <!-- ToDo NAVBAR -->
 
     <div>
         <nav class="navbar" style>
             <div class="nav-left">
-                <a href="/issues" title="Homepage" class="logo">
-                    <img src="../../static/imatge/logo_IssuePeople.png" style="width: 128px; height: 100px;">
+                <a href="{% url 'tots_issues' %}" title="Homepage" class="logo">
+                    <img alt="logo" src="{{ logo_url }}" style="width: 128px; height: 100px;">
                 </a>
             </div>
             <div class="nav-right">
-                <a href="/usuaris/perfil" title="Usuari" class="logo">
-                    <img src= usuaris/perfil/{{usuari.avatar.url}} style="width: 32px; height: 32px;">
+                <a href="{% url 'perfil' %}" title="Usuari" class="logo">
+                    <img alt="Avatar" src="{{ usuari.avatar.url }}" style="width: 32px; height: 32px;">
                 </a>
             </div>
         </nav>
