task #116 desassignar issues

--- a/issues/templates/issue_edit.html
+++ b/issues/templates/issue_edit.html
@@ -263,7 +263,7 @@
                                         height="60px"
                                     >
                                     <span style="margin-left: 15px;">{{ issue.assignacio.first_name }}</span>
-                                    <a href="{% url 'esborrar_assignat' issue.id issue.assignacio.user.id %}">
+                                    <a href="{% url 'esborrar_assignacio' issue.id %}">
                                         <i class="fa fa-times" aria-hidden="true"></i>
                                     </a>
                                 </div>  
